ipad portrait nav wrap fix

--- a/assets/css/smc-custom-bootstrap-b.css
+++ b/assets/css/smc-custom-bootstrap-b.css
@@ -42,6 +42,8 @@
   line-height: 1.8em;
 }
 
+
+
 /*navbar main link selected style*/
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
   background-color: #fff;
@@ -189,7 +191,7 @@ footer {
 /* left align the brand with the rest of the page content when the nav collapses into the hamburger */
 @media (max-width: 768px) {
 .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
-    margin-left: 15px;
+    margin-left: 14px;
 }
 }
 
@@ -197,6 +199,7 @@ footer {
 /* left align the nav links with the main body conetent when the links wrap */
 .navbar-default .navbar-collapse a{
     margin-left: 0px;
+    padding-left: 14px;
 }
 /* left align the brand with the rest of the page content at 768px wide */
 .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
